final CIP clean-up and documentation; 958 lines
Former-commit-id: a1ea016faa5d1b4ef30662792a7ecc6ddcc45086